# P2PEnergyTrading

./: .gitignore  LICENSE.txt  README.md  battery_test.ipynb  classification.md  pyproject.toml  requirements.txt  testing.ipynb
docs/: notes.txt
notebooks/: IEX_test.ipynb  demand_test.ipynb
src/: agent.py  environment.py
src/IEX_data/: iex_15min_market.csv  iex_hourly_market.csv
src/config/: agents.json  battery_config.json  demand_config.json  env_config.json  regulations.json
src/fy_project/: agent.py  callbacks.py  environment.py  main.py  paths.py  utils.py
src/fy_project/IEX_data/: iex_daily_market.csv
src/fy_project/env/: __init__.py  battery.py  demand.py  environment.py  market.py  weather.py
src/weather_cache/: Bangalore_2025.json
tests/: IEX_test.ipynb  auction_test.ipynb  battery_test.ipynb  checkpoint_test.ipynb  env_test.ipynb  testing.ipynb  weather_test.ipynb
tests/src/weather_cache/: Bangalore_2024.json  Bangalore_2025.json
weather_cache/: Bangalore_2026.json
