[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FY_project"
version = "0.1.0"
description = "Multi-agent RLlib energy trading environment for Indian IEX"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2",
    "ray[rllib]>=2.9",
    "gymnasium>=0.29",
    "numpy",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/energy_rl"]